/*
 * Copyright 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.google.android.horologist.mediasample.domain.proto;

option java_package = "com.google.android.horologist.mediasample.domain.proto";
option java_outer_classname = "SettingsProto";

enum OffloadMode {
  BACKGROUND = 0;
  NEVER = 1;
  ALWAYS = 2;
}

message Settings {
  bool show_time_text_info = 1;
  bool podcast_controls = 2;
  bool load_items_at_startup = 3;
  bool animated = 4;
  bool debug_offload = 5;
  OffloadMode offload_mode = 6;
}
